--- a/index.html
+++ b/index.html
@@ -3,22 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Landing Page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <div id="top-container">
-            <div id="header">
-                <div>Header Logo</div>
+            <div id="header" class="header">
+                <div id="logo" class="header">Header Logo</div>
 
-                <div id="link-one">header link one</div>
-                <div id="link-two">header link two</div>
-                <div id="link-three">header link three</div>
+                <div id="links" class="header">
+                    <div id="link-one">header link one</div>
+                    <div id="link-two">header link two</div>
+                    <div id="link-three">header link three</div>
+                </div>
             </div>
 
             <div id="presentation">
-                <div id="title">This website is awesome</div>
-                <div id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi aliquid modi vitae voluptatum eveniet corporis harum fuga at, ab dicta cupiditate nulla pariatur! Quisquam impedit enim, amet assumenda consequatur sed.</div>
-                <button type="button" class="sign-up">Sign Up</button>
+                <div id="text-container">
+                    <div id="title">This website is <br>awesome</div>
+                    <div id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi <br> aliquid modi vitae voluptatum eveniet corporis harum fuga at, <br>ab dicta cupiditate nulla pariatur! Quisquam impedit enim, amet <br>assumenda consequatur sed.</div>
+                    <button type="button" class="button-3">Sign Up</button>
+                </div>
                 <img src="https://placehold.co/300x200" alt="placeholder">
             </div>
         </div>
