--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi <br> aliquid modi vitae voluptatum eveniet corporis harum fuga at, <br>ab dicta cupiditate nulla pariatur! Quisquam impedit enim, amet <br>assumenda consequatur sed.</div>
                     <button type="button" class="button-3">Sign Up</button>
                 </div>
-                <img src="https://placehold.co/300x200" alt="placeholder">
+                <div id="placeholder"><img src="https://placehold.co/300x200" alt="placeholder"></div>
             </div>
         </div>
     </body>
