edited index.html and style.css to add space on the top of the page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <div id="top-container">
-            <div id="header" class="header">
+            <div class="header">
                 <div id="logo" class="header">Header Logo</div>
 
                 <div id="links" class="header">
