made the 2nd part of the webpage in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <!-- TOP OF THE PAGE -->
         <div id="top-container">
             <div class="header">
                 <div id="logo" class="header">Header Logo</div>
@@ -25,6 +26,33 @@
                     <button type="button" class="button-3">Sign Up</button>
                 </div>
                 <div id="placeholder"><img src="https://placehold.co/300x200" alt="placeholder"></div>
+            </div>
+        </div>
+        <!-- TOP OF THE PAGE -->
+
+        <div id="information-container">
+            <div id="title">Some random information.</div>
+
+            <div id="information">
+                <div id="info-1" class="info">
+                    <img class="info-image" src="https://placehold.co/150x150" alt="placeholder">
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+
+                <div id="info-2" class="info">
+                    <img class="info-image" src="https://placehold.co/150x150" alt="placeholder">
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+
+                <div id="info-3" class="info">
+                    <img class="info-image" src="https://placehold.co/150x150" alt="placeholder">
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
+
+                <div id="info-4" class="info">
+                    <img class="info-image" src="https://placehold.co/150x150" alt="placeholder">
+                    <div>this is some subtext under an illustration or image</div>
+                </div>
             </div>
         </div>
     </body>
