made the quote part in the index.html and style.css

--- a/index.html
+++ b/index.html
@@ -55,5 +55,9 @@
                 </div>
             </div>
         </div>
+
+        <div id="quote-container">
+            <blockquote id="quote">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem et accusamus, provident dolor expedita quod nemo, unde, aspernatur quia eius labore corporis eos dicta hic neque nam laudantium beatae odio! <br> <div id="author">&mdash; The Amazing Myself</div></blockquote>
+        </div>
     </body>
 </html>
