made the 'call to action' part in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div id="text-container">
                     <div id="title">This website is <br>awesome</div>
                     <div id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi <br> aliquid modi vitae voluptatum eveniet corporis harum fuga at, <br>ab dicta cupiditate nulla pariatur! Quisquam impedit enim, amet <br>assumenda consequatur sed.</div>
-                    <button type="button" class="button-3">Sign Up</button>
+                    <button type="button" class="button-top">Sign Up</button>
                 </div>
                 <div id="placeholder"><img src="https://placehold.co/300x200" alt="placeholder"></div>
             </div>
@@ -58,6 +58,16 @@
 
         <div id="quote-container">
             <blockquote id="quote">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem et accusamus, provident dolor expedita quod nemo, unde, aspernatur quia eius labore corporis eos dicta hic neque nam laudantium beatae odio! <br> <div id="author">&mdash; The Amazing Myself</div></blockquote>
+        </div>
+
+        <div id="call-to-action-container">
+            <div id="blue-banner">
+             <div id="text">
+                 <div id="title">Call to action! It's time!</div>
+                 <div id="description">Sign up for out product by clicking that button right over there!</div>
+             </div>
+             <button type="button" class="button-bottom">Sign up</button>
+            </div>
         </div>
     </body>
 </html>
