--- a/index.html
+++ b/index.html
@@ -69,5 +69,9 @@
              <button type="button" class="button-bottom">Sign up</button>
             </div>
         </div>
+
+        <div id="copyright-container">
+            <div id="text">Copyright © The Odin Project 2021</div>
+        </div>
     </body>
 </html>
